# arithmetic-coding-steganography

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
src/stego_arith_coding/: __init__.py  cli.py  config.py  core.py  visualize.py
tests/: __init__.py  test_bit_conversion.py  test_core.py  test_interval_collapse.py
