[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stego-arith-coding"
version = "0.1.0"
description = "Arithmetic coding steganography library for hiding information in text"
authors = [{name = "Stego Demo Project", email = "noreply@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
cli = ["click>=8.0.0"]
test = ["pytest>=6.0.0"]

[project.scripts]
stego-arith = "stego_arith_coding.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"